# ml_lab-main

./: README.md  pyproject.toml  setup.py
data/: form_4138_data.csv  preprocessing_test_data.csv
dictionaries/: 4138_terms.csv  medical_bodypart.csv  medical_conditions.csv  medical_general.csv  medical_procedures.csv
ml_lab/: app.py
ml_lab/models/: custom_vectorizer.py  form_4138_decision_tree.py  form_4138_nn.py  spellchecker.py
ml_lab/static/css/: style.css
ml_lab/templates/: classification.html  home.html  layout.html
ml_lab/train/: fit_custom_vectorizer.py  generate_spellcheck_dict.py  train_decision_tree.py  train_nn.py
ml_lab/utils/: create_data_artifacts.py  data_loader.py  eval_model.py  keyword_extractor.py  label_mapper.py  load_data.py  text_preprocessor.py
notebooks/: data_exploration.ipynb  eval_models.ipynb  grid_search_dec_tree.ipynb  grid_search_nn.ipynb
tests/: pytest_preprocessing.py  test_4138_dec_tree.py  test_4138_nn.py
